--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <h1>Weather</h1>
             <h3 class="temp"></h3>
             <h3 class="time"></h3>
+            <ul class="forecast">
+
+            </ul>
         </div>
         <script src="index.js"></script>
     </body>
