--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     </head>
     <body>
         <div class="container">
-            <label for="location-search">Search your location:</label>
-            <input type="search" id="location-search" name="location-search" />
-            <button>Search</button>
+            <button class="searchModal">Find a Location</button>
+
+            <dialog class="resultsModal">
+                <label for="location-search">Search your location:</label>
+                <input type="search" id="location-search" name="location-search" />
+                <button class="searchLocation">Search</button>
+                <ul class="searchResults">
+
+                </ul>
+            </dialog>
 
             <h1>Weather</h1>
             <h3 class="temp"></h3>
