--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div class="container">
             <button class="searchModal">Find a Location</button>
+            <button class="myLocation">My Location 📍</button>
 
             <dialog class="resultsModal">
                 <label for="location-search">Search your location:</label>
@@ -21,6 +22,9 @@
             </dialog>
 
             <h1>Weather</h1>
+            <div class="imgContainer">
+                
+            </div>
             <h3 class="temp"></h3>
             <h3 class="time"></h3>
             <ul class="forecast">
