added hourly logic

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                 <div class="imgContainer">
 
                 </div>
-                <h2 class="temp"></h2>
+                <h2 class="temp" style="font-size: 40px;"></h2>
                 <h4 class="highlows"></h4>
-                <h3 class="time"></h3>
+                <ul class="hourly">
+
+                </ul>
                 <ul class="forecast">
 
                 </ul>
