--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </dialog>
 
             <div class="weatherResults">
+                <button class="back"><i class="fa-solid fa-arrow-left"></i></button>
                 <h1 class="title"></h1>
                 <div class="imgContainer">
 
@@ -43,6 +44,10 @@
                 <ul class="forecast">
 
                 </ul>
+
+                <div class="chart-container">
+                    <img class="chart" />
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
