added chart title and cleared hourly forecast after each function call

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 </ul>
 
                 <div class="chart-container">
+                    <h4 class="chartTitle"></h4>
                     <img class="chart" />
                 </div>
             </div>
