added wind speed and humidity blocks

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
 
                 </ul>
 
+                <div class="windHumidityContainer">
+                    <div class="wind">
+                        <i class="fa-solid fa-wind"></i>
+                    </div>
+                    <div class="humidity">
+                        <i class="fa-solid fa-water"></i>
+                    </div>
+                </div>
+
                 <div class="chart-container">
                     <h4 class="chartTitle"></h4>
                     <img class="chart" />
